Fix bug 75271; ensure that we update commands properly for batched transactions. r=akkana, sr=kin